--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # raw_sound: ^0.3.0+1
   midi_player: ^0.2.0
   soundpool: ^2.3.0
+  shared_preferences: ^2.0.15
+  fluttertoast: ^8.1.2
+  # fade_out_particle: ^1.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
