--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   soundpool: ^2.3.0
   shared_preferences: ^2.0.15
   fluttertoast: ^8.1.2
+  # simple_ripple_animation: ^0.0.3
   # fade_out_particle: ^1.2.1
 
   # The following adds the Cupertino Icons font to your application.
